// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-menu Checkbox 1`] = `
<DocumentFragment>
  <span
    class="menu"
  >
    <div
      class="menu__items"
      role="menu"
    >
      <div
        aria-checked="true"
        aria-hidden="false"
        class="menu__item"
        role="menuitem"
        tabindex="0"
        value="item 1"
      >
        <span>
          item 1
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        aria-checked="false"
        aria-hidden="false"
        class="menu__item"
        role="menuitem"
        tabindex="0"
        value="item 2"
      >
        <span>
          item 2
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        aria-checked="true"
        aria-hidden="false"
        class="menu__item"
        role="menuitem"
        tabindex="0"
        value="item 3"
      >
        <span>
          item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-menu Default 1`] = `
<DocumentFragment>
  <span
    class="menu"
  >
    <div
      class="menu__items"
      role="menu"
    >
      <div
        aria-checked="false"
        aria-hidden="false"
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span>
          Item 1 that has very long text
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        aria-checked="false"
        aria-hidden="false"
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span>
          Item 2
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        aria-checked="false"
        aria-hidden="false"
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span>
          Item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-menu Radio 1`] = `
<DocumentFragment>
  <div
    class="tabs"
  >
    <div
      class="tabs__items"
      role="tablist"
    >
      <div
        aria-controls="default-tabpanel-0"
        aria-selected="true"
        class="tabs__item"
        id="default-tab-0"
        role="tab"
        tabindex="0"
      >
        <span>
          Menu.checked
        </span>
      </div>
      <div
        aria-controls="default-tabpanel-1"
        aria-selected="false"
        class="tabs__item"
        id="default-tab-1"
        role="tab"
        tabindex="-1"
      >
        <span>
          Item.checked
        </span>
      </div>
      <div
        aria-controls="default-tabpanel-2"
        aria-selected="false"
        class="tabs__item"
        id="default-tab-2"
        role="tab"
        tabindex="-1"
      >
        <span>
          Menu.checked+Item.checked
        </span>
      </div>
    </div>
    <div
      class="tabs__content"
    >
      <div
        aria-labelledby="default-tab-0"
        class="tabs__panel"
        id="default-tabpanel-0"
        role="tabpanel"
      >
        <div
          class="tabs__cell"
        >
          <span
            class="menu"
          >
            <div
              class="menu__items"
              role="menu"
            >
              <div
                aria-checked="false"
                aria-hidden="false"
                class="menu__item"
                role="menuitem"
                tabindex="0"
              >
                <span>
                  item 0
                </span>
                <svg
                  aria-hidden="true"
                  class="icon icon--tick-small"
                  focusable="false"
                  height="16px"
                  width="16px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-tick-small"
                  />
                </svg>
              </div>
              <div
                aria-checked="true"
                aria-hidden="false"
                class="menu__item"
                role="menuitem"
                tabindex="0"
              >
                <span>
                  Prechecked on menu level
                </span>
                <svg
                  aria-hidden="true"
                  class="icon icon--tick-small"
                  focusable="false"
                  height="16px"
                  width="16px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-tick-small"
                  />
                </svg>
              </div>
              <div
                aria-checked="false"
                aria-hidden="false"
                class="menu__item"
                role="menuitem"
                tabindex="0"
              >
                <span>
                  item 2
                </span>
                <svg
                  aria-hidden="true"
                  class="icon icon--tick-small"
                  focusable="false"
                  height="16px"
                  width="16px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-tick-small"
                  />
                </svg>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        aria-labelledby="default-tab-1"
        class="tabs__panel"
        hidden=""
        id="default-tabpanel-1"
        role="tabpanel"
      >
        <div
          class="tabs__cell"
        >
          <span
            class="menu"
          >
            <div
              class="menu__items"
              role="menu"
            >
              <div
                aria-checked="true"
                aria-hidden="false"
                class="menu__item"
                role="menuitem"
                tabindex="0"
              >
                <span>
                  Prechecked on item level
                </span>
                <svg
                  aria-hidden="true"
                  class="icon icon--tick-small"
                  focusable="false"
                  height="16px"
                  width="16px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-tick-small"
                  />
                </svg>
              </div>
              <div
                aria-checked="false"
                aria-hidden="false"
                class="menu__item"
                role="menuitem"
                tabindex="0"
              >
                <span>
                  item 1
                </span>
                <svg
                  aria-hidden="true"
                  class="icon icon--tick-small"
                  focusable="false"
                  height="16px"
                  width="16px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-tick-small"
                  />
                </svg>
              </div>
              <div
                aria-checked="false"
                aria-hidden="false"
                class="menu__item"
                role="menuitem"
                tabindex="0"
              >
                <span>
                  item 2
                </span>
                <svg
                  aria-hidden="true"
                  class="icon icon--tick-small"
                  focusable="false"
                  height="16px"
                  width="16px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-tick-small"
                  />
                </svg>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        aria-labelledby="default-tab-2"
        class="tabs__panel"
        hidden=""
        id="default-tabpanel-2"
        role="tabpanel"
      >
        <div
          class="tabs__cell"
        >
          <span
            class="menu"
          >
            <div
              class="menu__items"
              role="menu"
            >
              <div
                aria-checked="false"
                aria-hidden="false"
                class="menu__item"
                role="menuitem"
                tabindex="0"
              >
                <span>
                  Prechecked on item level
                </span>
                <svg
                  aria-hidden="true"
                  class="icon icon--tick-small"
                  focusable="false"
                  height="16px"
                  width="16px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-tick-small"
                  />
                </svg>
              </div>
              <div
                aria-checked="true"
                aria-hidden="false"
                class="menu__item"
                role="menuitem"
                tabindex="0"
              >
                <span>
                  Prechecked on menu level
                </span>
                <svg
                  aria-hidden="true"
                  class="icon icon--tick-small"
                  focusable="false"
                  height="16px"
                  width="16px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-tick-small"
                  />
                </svg>
              </div>
              <div
                aria-checked="false"
                aria-hidden="false"
                class="menu__item"
                role="menuitem"
                tabindex="0"
              >
                <span>
                  item 2
                </span>
                <svg
                  aria-hidden="true"
                  class="icon icon--tick-small"
                  focusable="false"
                  height="16px"
                  width="16px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-tick-small"
                  />
                </svg>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-menu With Badges 1`] = `
<DocumentFragment>
  <span
    class="menu"
  >
    <div
      class="menu__items"
      role="menu"
    >
      <div
        aria-checked="false"
        aria-hidden="true"
        aria-label="item 1 (5 unread items)"
        class="menu__item menu__item--badged"
        role="menuitem"
        tabindex="0"
      >
        <span>
          item 1
          <span
            aria-hidden="true"
            class="badge"
          >
            5
          </span>
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        aria-checked="false"
        aria-hidden="true"
        aria-label="item 2 (23 unread items)"
        class="menu__item menu__item--badged"
        role="menuitem"
        tabindex="0"
      >
        <span>
          item 2
          <span
            aria-hidden="true"
            class="badge"
          >
            23
          </span>
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        aria-checked="false"
        aria-hidden="false"
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span>
          item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-menu With Disabled Item 1`] = `
<DocumentFragment>
  <span
    class="menu"
  >
    <div
      class="menu__items"
      role="menu"
    >
      <div
        aria-checked="false"
        aria-hidden="false"
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span>
          item 1 that has very long text
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        aria-checked="false"
        aria-disabled="true"
        aria-hidden="false"
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span>
          Item 2
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        aria-checked="false"
        aria-hidden="false"
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span>
          Item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-menu With Icons 1`] = `
<DocumentFragment>
  <span
    class="menu"
  >
    <div
      class="menu__items"
      role="menu"
    >
      <div
        aria-checked="false"
        aria-hidden="false"
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span>
          <svg
            aria-hidden="true"
            class="icon icon--confirmation"
            focusable="false"
            height="24px"
            style="margin-right: 8px;"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-confirmation"
            />
          </svg>
           Confirmed
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        aria-checked="false"
        aria-hidden="false"
        class="menu__item"
        role="menuitem"
        tabindex="0"
        value="item 2"
      >
        <span>
          <svg
            aria-hidden="true"
            class="icon icon--attention"
            focusable="false"
            height="24px"
            style="margin-right: 8px;"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-attention"
            />
          </svg>
           Not yet confirmed
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        aria-checked="false"
        aria-hidden="false"
        class="menu__item"
        role="menuitem"
        tabindex="0"
        value="item 3"
      >
        <span>
          <svg
            aria-hidden="true"
            class="icon icon--attention"
            focusable="false"
            height="24px"
            style="margin-right: 8px;"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-attention"
            />
          </svg>
           Not yet confirmed
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-menu With Separator 1`] = `
<DocumentFragment>
  <span
    class="menu"
  >
    <div
      class="menu__items"
      role="menu"
    >
      <div
        aria-checked="false"
        aria-hidden="false"
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span>
          item 1 that has very long text
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        aria-checked="false"
        aria-hidden="false"
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span>
          Item 2
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <hr
        class="menu__separator"
        role="separator"
        tabindex="0"
      />
      <div
        aria-checked="false"
        aria-hidden="false"
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span>
          Item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        aria-checked="false"
        aria-hidden="false"
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span>
          Item 4
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        aria-checked="false"
        aria-hidden="false"
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span>
          Item 5
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;
